fix(responsive): tabs subtabs vertical fix for responsive, spacing fix, hover title fix

--- a/src/components/Layout/Tabs.module.scss
+++ b/src/components/Layout/Tabs.module.scss
@@ -21,6 +21,7 @@
 
   &.layout-subtabs-vertical {
     nav {
+      padding: 8px 0;
       justify-content: center;
       border-bottom: none;
     }
@@ -70,7 +71,6 @@
 
 .tab-subtabs-vertical {
   padding: 10px $spacing-large;
-  margin-top: 8px;
   margin-bottom: 0;
   border: none;
   font-size: var(--font-size-small);
@@ -131,6 +131,10 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .container.layout-subtabs-vertical nav {
+    padding: 10px 0;
+  }
+
   .tab {
     padding: 0 16px 10px 0;
     margin-bottom: 0;
@@ -175,6 +179,17 @@
     }
     &:after {
       display: none;
+    }
+  }
+
+  .tab-subtabs-vertical {
+    padding: 0 20px;
+    font-size: var(--font-size-small);
+    &:after {
+      display: none;
+    }
+    &+&.active {
+      border-left: 3px solid var(--color-gray-vvvlight);
     }
   }
 }
