--- a/src/components/Utils/HoverTitle.module.scss
+++ b/src/components/Utils/HoverTitle.module.scss
@@ -15,6 +15,7 @@
     pointer-events: none;
     opacity: 0;
     transition: all 0.15s ease-out;
+    word-break: break-word;
   }
 
   &.hover_enabled:hover {
